Minor alignment fix on song artists

--- a/src/components/SongItem.css
+++ b/src/components/SongItem.css
@@ -27,7 +27,6 @@
 .song-item > * {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     color: inherit;
 }
